--- a/vsss_simulation/config/ball_odom2_tf.yaml
+++ b/vsss_simulation/config/ball_odom2_tf.yaml
@@ -1,6 +1,6 @@
 odom_to_tf:
   ros__parameters:
-    odom_topic: "/ball/odom"
+    odom_topic: "ball/odom"
     frame_id: "world"
     child_frame_id: "sphere_link"
     inverse_tf: False
