--- a/vsss/vsss_simulation/CMakeLists.txt
+++ b/vsss/vsss_simulation/CMakeLists.txt
@@ -13,7 +13,7 @@ find_package(ament_cmake_python REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(rclpy REQUIRED)
-find_package(urdf_launch REQUIRED)
+find_package(urdf REQUIRED)
 find_package(visualization_msgs REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 
