Improved docker structure

--- a/vsss/docker/compose/docker-compose-cuda.yml
+++ b/vsss/docker/compose/docker-compose-cuda.yml
@@ -4,8 +4,9 @@ services:
       context: ../
       dockerfile: dockerfiles/vsss.dockerfile
       args:
-        BASE_IMAGE: ros2_cuda_base
-    image: vsss_gpu_image
+        BASE_IMAGE: roborregos/vsss:ros2_cuda_base
+        SHOULD_USE_CUDA: --index-url https://download.pytorch.org/whl/cu121
+    image: roborregos/vsss:vsss_gpu
     container_name: vsss_gpu
     gpus: all
     environment:
@@ -34,11 +35,3 @@ services:
     working_dir: /workspace
     command: >
       bash -c "/bin/bash "
-
-  cuda_base:
-    build:
-      context: ../
-      dockerfile: dockerfiles/ros.dockerfile
-      args:
-        BASE_IMAGE: nvidia/cuda:12.2.2-devel-ubuntu22.04
-    image: ros2_cuda_base
