Vital Strategy Changes: -Easy Parameter Edition at runtime -Included PI in angle correction -Added Action at unaccesible points

--- a/vsss/vsss_simulation/package.xml
+++ b/vsss/vsss_simulation/package.xml
@@ -4,7 +4,7 @@
   <name>vsss_simulation</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="david_vl2003@hotmail.com">deivideich</maintainer>
+  <maintainer email="efrain.vh.21.12@gmail.com">efrain</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
